# android-opencv-opengl-assessment

./: GITHUB_SUBMISSION_GUIDE.md  README.md  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/flam/edgeDetection/: EdgeDetectionRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
screenshots/: README.md  edge-detection-off.md  edge-detection-on.md
web/: HOW_TO_ADD_IMAGES.md  README.md  index.html  package.json  tsconfig.json
web/src/: viewer.ts
